fixed z-index on delete button

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ body::-webkit-scrollbar {
 }
 
 .deleteBtn {
+  z-index: 100;
   cursor: pointer;
   position: absolute;
   top: 0;
